--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,5 +26,6 @@ subjects:
 - !lcsh 'Theater -- Utah -- History'
 - !lcc 'PN'
 - !lcsh 'Mormons'
+- GITenberg
 title: The Mormons and the Theatre; or, The History of Theatricals in Utah
 url: http://www.gutenberg.org/ebooks/35565
